--- a/src/app/Modules/alert/alert.page.html
+++ b/src/app/Modules/alert/alert.page.html
@@ -1,17 +1,26 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
       Tab 1
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-content >
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
-  </ion-header>
-
+  </ion-header> -->
+  
+  <ion-row class="header-bg">
+    <ion-col>
+      <div>
+        <h5   class="title ml-10">
+         Alert
+        </h5>
+      </div>
+    </ion-col>
+  </ion-row>
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
