--- a/src/app/Modules/tabs/tabs.page.html
+++ b/src/app/Modules/tabs/tabs.page.html
@@ -1,26 +1,26 @@
-<ion-tabs>
+<ion-tabs >
 
   <ion-tab-bar slot="bottom" color="primary">
     <ion-tab-button tab="Home">
-      <ion-icon name="triangle"></ion-icon>
+      <img src="assets/Home.svg">
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="Market">
-      <ion-icon name="ellipse"></ion-icon>
+      <img src="assets/markit.svg">
       <ion-label>Market</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="Alert">
-      <ion-icon name="square"></ion-icon>
+      <img src="assets/alert.png">
       <ion-label>Alert</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="Explore">
-      <ion-icon name="square"></ion-icon>
+      <img src="assets/Home.svg">
       <ion-label>Explore</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="Profile">
-      <ion-icon name="square"></ion-icon>
+      <img src="assets/Profile.svg">
       <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
