--- a/src/app/Modules/home/home.page.html
+++ b/src/app/Modules/home/home.page.html
@@ -1,32 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<!-- <ion-header [translucent]="true">
+  <ion-toolbar slot="left">
     <ion-title>
       Tab 1
     </ion-title>
   </ion-toolbar>
   
-</ion-header>
+</ion-header> -->
 
-<ion-content [fullscreen]="false">
-  <ion-tabs>
-    <!-- Tab bar -->
-    <ion-tab-bar slot="top">
-      <ion-tab-button tab="account">
-        <ion-icon name="person"></ion-icon>
-      </ion-tab-button>
-      <ion-tab-button tab="contact">
-        <ion-icon name="call"></ion-icon>
-      </ion-tab-button>
-      <ion-tab-button tab="settings">
-        <ion-icon name="settings"></ion-icon>
-      </ion-tab-button>
-    </ion-tab-bar>
-  </ion-tabs>
-  <!-- <ion-header collapse="condense">
-    <ion-toolbar>
-      
-    </ion-toolbar>
-  </ion-header> -->
+<ion-content >
+  <ion-row class="header-bg">
+    <ion-col>
+      <div>
+        <h5   class="title ml-10">
+         Home
+        </h5>
+      </div>
+    </ion-col>
+  </ion-row>
  
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
