--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,19 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+.header-bg {
+    background: linear-gradient(180deg, #007fff 0%, #1c52bb 100%);
+    .title {
+        font-family: Inter;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 29px;
+        /* identical to box height */
+      
+        color: #ffffff;
+      }
+  }
+  .ml-10{
+    margin-left: 10px;
+  }
