--- a/src/app/shared/new-details/new-details.component.html
+++ b/src/app/shared/new-details/new-details.component.html
@@ -10,7 +10,7 @@
   </ion-row>
   <ion-row class="scroll">
     <ion-col class="ion-no-padding " style=" background: white;" size="12">
-      <img class="img "  (click)="openNews(newsDetail.newsUrl)" [src]="newsDetail.imageUrl">
+      <img class="img "  (click)="openWebpage(newsDetail.newsUrl)" [src]="newsDetail.imageUrl">
     </ion-col>
     <ion-col class="ion-no-padding bg-white" size="12">
       <div class="content-title"> {{newsDetail?.title}}</div>
