--- a/src/app/Modules/explore/explore.page.scss
+++ b/src/app/Modules/explore/explore.page.scss
@@ -17,16 +17,10 @@ ion-slide {
   margin-right: 20px;
 }
 
-ion-slide {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  z-index: 10;
-  padding: 8em 1em 0;
-  background-color: #120103;
-  background-position: 50% 50%;
-  background-size: cover;
-  transition: left 0s 0.75s;
+.mb-30{
+ margin-bottom: 30px;
+}
+
+.height{
+  margin-bottom: 30px;
 }
