--- a/src/app/shared/new-card/new-card.component.scss
+++ b/src/app/shared/new-card/new-card.component.scss
@@ -40,9 +40,11 @@
   }
 }
 .m-10 {
-  margin: 10px;
+  margin: 0px 10px;
 }
-
+.mb-4 {
+  margin-bottom: 4px;
+}
 .scourcename {
   font-family: Inter;
   font-style: normal;
